# crs_block_matrices

./: .gitignore  Makefile  README.md  check_apply_test_matrix.m  write_mat.m  write_vec.m
src/: test_apply_single_gpu.cu
src/common/: TODO.md
src/common/communication/: MAP_CONCEPT.txt  PARTITIONER_CONCEPT.txt  color_file_partitioner.h  comm.h  compact_map.h  linear_partitioner.h  mpi_distributor.h  mpi_distributor_copy_kernels_impl.h  mpi_distributor_pre_init.h  nodes_partitioner.h  parted_map.h  rect_map.h  rect_map_init_impl.h  serial_map.h
src/common/communication/detail/: mpi_distributor.h
src/common/communication/tests/: Makefile  config.NI-gpu-cluster.inc  mpi_distributor_test.cu  poisson_13x20x11.cfg  poisson_200x200x200.cfg  poisson_300x300x300.cfg  poisson_50x50x50.cfg  rect_map_test.cfg  rect_map_test.cpp
src/common/for_each/: CMakeLists.txt  Makefile  for_each_1d.h  for_each_1d_cuda_impl.cuh  for_each_1d_openmp_impl.h  for_each_config.h  for_each_enums.h  for_each_func_macro.h  for_each_func_macro_test.cpp  for_each_ndim.h  for_each_ndim_cuda_impl.cuh  for_each_ndim_openmp_impl.h  for_each_ndim_test.cu  for_each_storage_types.h
src/common/numerical_algos/matrices/: brs_matrix.h  (+2 more)
src/common/tensor_field/: CMakeLists.txt  Makefile  t_tensor_field_ndim_tml.h  t_tensor_field_tml.h  tensor_field_config.h  tensor_field_enums.h  tensor_field_mem_funcs.h  tensor_field_ndim_test.cpp  tensor_field_ndim_test.cu  tensor_field_test.cu
src/common/utils/: cusparse_safe_call.h  scalar_traits.h
src/common/vecs_mats/: t_rect_tml.h  t_vec_tml.h  test_rect.cpp
(+20 files in other folders)
